--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm i &&  npm i --prefix ./client && npm run build --prefix ./client && nodemon index.js"
+    "dev": "npm i &&  npm i --prefix ./client && npm run build --prefix ./client && node index.js"
   },
   "keywords": [],
   "author": "",
