--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npm i &&  npm i --prefix ./client && npm run build --prefix ./client && node index.js"
+    "build": "npm i &&  npm i --prefix ./client && npm run build --prefix ./client",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
